--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "sns-generic": "^1.0.4",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
