--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
